--- a/airlight-and/src/main/AndroidManifest.xml
+++ b/airlight-and/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".MainActivity"
                   android:theme="@android:style/Theme.Holo.Light.NoActionBar">
         </activity>
+        <activity android:name=".Test"/>
     </application>
 
 </manifest>
